deploy: 095a5e4b42cb0291117df4147f6bda4a50873844

--- a/learn/Intro.html
+++ b/learn/Intro.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Git - notes</title>
+        <title>learn - notes</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter2.html" class="active"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="../web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="../web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="../web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="../linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="../linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="../linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li></ol></li><li class="chapter-item expanded "><a href="../learn/Intro.html"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn/react/Intro.html"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter14.html"><strong aria-hidden="true">1.4.1.14.</strong> -reuter的使用</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter15.html"><strong aria-hidden="true">1.4.1.15.</strong> 全局状态管理</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter16.html"><strong aria-hidden="true">1.4.1.16.</strong> 路由权限控制</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter17.html"><strong aria-hidden="true">1.4.1.17.</strong> 组件库等相关生态</a></li></ol></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="../web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="../web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="../web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="../linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="../linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="../linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li></ol></li><li class="chapter-item expanded "><a href="../learn/Intro.html" class="active"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn/react/Intro.html"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter14.html"><strong aria-hidden="true">1.4.1.14.</strong> -reuter的使用</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter15.html"><strong aria-hidden="true">1.4.1.15.</strong> 全局状态管理</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter16.html"><strong aria-hidden="true">1.4.1.16.</strong> 路由权限控制</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter17.html"><strong aria-hidden="true">1.4.1.17.</strong> 组件库等相关生态</a></li></ol></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -173,145 +173,17 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="git"><a class="header" href="#git">Git</a></h1>
-<h2 id="一安装-git"><a class="header" href="#一安装-git">一.安装 Git</a></h2>
-<ol>
-<li>官网下载</li>
-</ol>
-<p><a href="https://git-scm.com/downloads">git</a></p>
-<ol start="2">
-<li>终端下载</li>
-</ol>
-<pre><code class="language-sh">winget install --id Git.Git -e --source winget
-</code></pre>
-<h2 id="二配置-git"><a class="header" href="#二配置-git">二.配置 Git</a></h2>
-<p>在 powershell 中输入<code>git</code>检测是否配置完成</p>
-<h3 id="配置用户"><a class="header" href="#配置用户">配置用户</a></h3>
-<ol>
-<li>初始化 Git 仓库</li>
-</ol>
-<pre><code class="language-sh">git init
-</code></pre>
-<ol start="2">
-<li>设置用户名和邮箱</li>
-</ol>
-<pre><code class="language-sh">git config user.name 'github用户名'
-git config user.email '邮箱'
-</code></pre>
-<ol start="3">
-<li>查看邮箱用户配置</li>
-</ol>
-<pre><code class="language-sh">git config --list
-</code></pre>
-<ol start="4">
-<li>配置 git</li>
-</ol>
-<p>进入 gitconfig 文件</p>
-<pre><code class="language-sh">vim ~/.gitconfig
-</code></pre>
-<p>添加以下内容</p>
-<pre><code class="language-sh">[user]
-    name=ptsfdtz
-    email=pitousanfadetuzi@gmail.com
-[http]
-    proxy=http://127.0.0.1:7890
-[https]
-    proxy=http://127.0.0.1:7890
-[init]
-    defaultBranch=main
-[pull]
-    ff=only
-</code></pre>
-<p>令 git 使用 clash 代理</p>
-<h2 id="三初次提交模板"><a class="header" href="#三初次提交模板">三.初次提交模板</a></h2>
-<ol>
-<li>项目初始化</li>
-</ol>
-<pre><code class="language-sh">git init
-echo &quot;# README&quot; &gt; README.md
-git add README.md
-git commit -m &quot;First commit&quot;
-</code></pre>
-<ol start="2">
-<li>添加远程仓库链接</li>
-</ol>
-<pre><code class="language-sh">git remote add origin #仓库链接
-</code></pre>
-<ol start="3">
-<li>默认分支 main</li>
-</ol>
-<pre><code class="language-sh">git branch -M main
-</code></pre>
-<ol start="4">
-<li>提交到 github 仓库</li>
-</ol>
-<pre><code class="language-sh">git push -f -u origin main
-</code></pre>
-<h2 id="四常用命令"><a class="header" href="#四常用命令">四.常用命令</a></h2>
-<ul>
-<li>查看当前状态</li>
-</ul>
-<pre><code class="language-sh">git status
-</code></pre>
-<ul>
-<li>查看提交记录</li>
-</ul>
-<pre><code class="language-sh">git log
-</code></pre>
-<ul>
-<li>回退到上一个版本</li>
-</ul>
-<pre><code class="language-sh">git reset --hard HEAD^
-</code></pre>
-<ul>
-<li>回退到上上个版本</li>
-</ul>
-<pre><code class="language-sh">git reset --hard HEAD^^
-</code></pre>
-<ul>
-<li>回退到指定版本</li>
-</ul>
-<pre><code class="language-sh">git reset --hard HEAD^^
-</code></pre>
-<ul>
-<li>分支相关的操作</li>
-</ul>
-<pre><code class="language-sh">git branch ##查看分支
-
-git branch &lt;name&gt; ##创建分支
-
-git checkout &lt;name&gt; ##切换分支
-
-git checkout -b &lt;name&gt; ##创建+切换分支
-
-git merge &lt;name&gt; ##合并某分支到当前分支
-
-git merge --no-ff -m &quot;...&quot; &lt;name&gt; ##使用普通模式合并分支，可以显示合并历史
-
-git branch (-m | -M) &lt;oldbranch&gt; &lt;newbranch&gt; ##重命名分支
-
-git branch -d &lt;name&gt; ##删除分支
-
-git branch -D &lt;name&gt; ##强行删除未合并分支
-
-git log --graph ##查看分支合并图
-
-git log --graph --pretty=oneline --abbrev-commit ##也可以查看分支合并图
-
-git tag &lt;num&gt;
-
-git push --tags
-</code></pre>
+                        <h1 id="learn"><a class="header" href="#learn">learn</a></h1>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../tool-usage/Chapter1.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../linux/Chapter3.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../tool-usage/Chapter3.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../learn/react/Intro.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -321,11 +193,11 @@ git push --tags
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../tool-usage/Chapter1.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../linux/Chapter3.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../tool-usage/Chapter3.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../learn/react/Intro.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
