--- a/learn/react/Intro.html
+++ b/learn/react/Intro.html
@@ -12,21 +12,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="../favicon.svg">
-        <link rel="shortcut icon" href="../favicon.png">
-        <link rel="stylesheet" href="../css/variables.css">
-        <link rel="stylesheet" href="../css/general.css">
-        <link rel="stylesheet" href="../css/chrome.css">
-        <link rel="stylesheet" href="../css/print.css" media="print">
+        <link rel="icon" href="../../favicon.svg">
+        <link rel="shortcut icon" href="../../favicon.png">
+        <link rel="stylesheet" href="../../css/variables.css">
+        <link rel="stylesheet" href="../../css/general.css">
+        <link rel="stylesheet" href="../../css/chrome.css">
+        <link rel="stylesheet" href="../../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="../fonts/fonts.css">
+        <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../highlight.css">
-        <link rel="stylesheet" href="../tomorrow-night.css">
-        <link rel="stylesheet" href="../ayu-highlight.css">
+        <link rel="stylesheet" href="../../highlight.css">
+        <link rel="stylesheet" href="../../tomorrow-night.css">
+        <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -35,7 +35,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "../";
+            var path_to_root = "../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="../web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="../web-develop/Chapter2.html" class="active"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="../web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="../linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="../linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="../linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li></ol></li><li class="chapter-item expanded "><a href="../learn/Intro.html"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn/react/Intro.html"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter14.html"><strong aria-hidden="true">1.4.1.14.</strong> -reuter的使用</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter15.html"><strong aria-hidden="true">1.4.1.15.</strong> 全局状态管理</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter16.html"><strong aria-hidden="true">1.4.1.16.</strong> 路由权限控制</a></li><li class="chapter-item expanded "><a href="../learn/react/Chapter17.html"><strong aria-hidden="true">1.4.1.17.</strong> 组件库等相关生态</a></li></ol></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../../Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="../../tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="../../tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="../../tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="../../tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="../../tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="../../web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="../../web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="../../web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="../../linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="../../linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="../../linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li></ol></li><li class="chapter-item expanded "><a href="../../learn/Intro.html"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../learn/react/Intro.html" class="active"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter14.html"><strong aria-hidden="true">1.4.1.14.</strong> -reuter的使用</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter15.html"><strong aria-hidden="true">1.4.1.15.</strong> 全局状态管理</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter16.html"><strong aria-hidden="true">1.4.1.16.</strong> 路由权限控制</a></li><li class="chapter-item expanded "><a href="../../learn/react/Chapter17.html"><strong aria-hidden="true">1.4.1.17.</strong> 组件库等相关生态</a></li></ol></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -144,7 +144,7 @@
                     <h1 class="menu-title">notes</h1>
 
                     <div class="right-buttons">
-                        <a href="../print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -174,35 +174,47 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="react"><a class="header" href="#react">react</a></h1>
-<ol>
-<li>安装 node.js</li>
-</ol>
-<pre><code class="language-sh">https://nodejs.org/en
+<h2 id="安装-nodejs"><a class="header" href="#安装-nodejs">安装 Node.js</a></h2>
+<p>Node.js 是一个基于 Chrome V8 引擎的 JavaScript 运行环境，可以让 JavaScript 运行在服务器端。</p>
+<p>下载：https://nodejs.org/zh-cn/download/package-manager</p>
+<h2 id="使用creact-react-app创建react项目"><a class="header" href="#使用creact-react-app创建react项目">使用creact-react-app创建React项目</a></h2>
+<pre><code class="language-bash">npx create-react-app my-app
+cd my-app
+npm start
 </code></pre>
-<ol start="2">
-<li>搭建 React 脚手架</li>
-</ol>
-<pre><code class="language-sh">npx create-react-app my-react-app
-
+<h2 id="文件目录"><a class="header" href="#文件目录">文件目录</a></h2>
+<pre><code>my-app
+├── README.md 
+├── node_modules // 依赖包
+├── package.json // 项目配置文件
+├── .gitignore
+├── public
+│   ├── favicon.ico
+│   ├── index.html
+│   └── manifest.json
+└── src
+    ├── App.css 
+    ├── App.js // 入口文件
+    ├── App.test.js // 测试文件
+    ├── index.css // 全局样式文件
+    ├── index.js // 入口文件
+    └── logo.svg 
 </code></pre>
-<ol start="3">
-<li>启动本地开发服务器</li>
-</ol>
-<pre><code class="language-sh">npm start
-</code></pre>
-<ol start="4">
-<li>项目初始化</li>
-</ol>
+<h2 id="两个核心库"><a class="header" href="#两个核心库">两个核心库</a></h2>
+<p>react： React 核心库，提供react的各个功能</p>
+<p>react-dom： 提供一些dom操作方法，比如渲染、更新、删除等</p>
+<h2 id="react项目组件关系"><a class="header" href="#react项目组件关系">react项目组件关系:</a></h2>
+<p><img src="./images/react%E7%BB%84%E4%BB%B6%E5%85%B3%E7%B3%BB.png" alt="react组件关系" /></p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../web-develop/Chapter1.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../learn/Intro.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../web-develop/Chapter3.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../../learn/react/Chapter1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -212,11 +224,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../web-develop/Chapter1.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../learn/Intro.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../web-develop/Chapter3.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../../learn/react/Chapter1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -231,13 +243,13 @@
         </script>
 
 
-        <script src="../elasticlunr.min.js"></script>
-        <script src="../mark.min.js"></script>
-        <script src="../searcher.js"></script>
+        <script src="../../elasticlunr.min.js"></script>
+        <script src="../../mark.min.js"></script>
+        <script src="../../searcher.js"></script>
 
-        <script src="../clipboard.min.js"></script>
-        <script src="../highlight.js"></script>
-        <script src="../book.js"></script>
+        <script src="../../clipboard.min.js"></script>
+        <script src="../../highlight.js"></script>
+        <script src="../../book.js"></script>
 
         <!-- Custom JS scripts -->
 
