--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li></ol></li><li class="chapter-item expanded "><a href="learn/Intro.html"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Intro.html"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter14.html"><strong aria-hidden="true">1.4.1.14.</strong> -reuter的使用</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter15.html"><strong aria-hidden="true">1.4.1.15.</strong> 全局状态管理</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter16.html"><strong aria-hidden="true">1.4.1.16.</strong> 路由权限控制</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter17.html"><strong aria-hidden="true">1.4.1.17.</strong> 组件库等相关生态</a></li></ol></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -814,7 +814,143 @@ cp #复制目录
 <pre><code class="language-sh">sudo apt update
 sudo apt install git
 </code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="learn"><a class="header" href="#learn">learn</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="react-1"><a class="header" href="#react-1">react</a></h1>
+<h2 id="安装-nodejs"><a class="header" href="#安装-nodejs">安装 Node.js</a></h2>
+<p>Node.js 是一个基于 Chrome V8 引擎的 JavaScript 运行环境，可以让 JavaScript 运行在服务器端。</p>
+<p>下载：https://nodejs.org/zh-cn/download/package-manager</p>
+<h2 id="使用creact-react-app创建react项目"><a class="header" href="#使用creact-react-app创建react项目">使用creact-react-app创建React项目</a></h2>
+<pre><code class="language-bash">npx create-react-app my-app
+cd my-app
+npm start
+</code></pre>
+<h2 id="文件目录"><a class="header" href="#文件目录">文件目录</a></h2>
+<pre><code>my-app
+├── README.md 
+├── node_modules // 依赖包
+├── package.json // 项目配置文件
+├── .gitignore
+├── public
+│   ├── favicon.ico
+│   ├── index.html
+│   └── manifest.json
+└── src
+    ├── App.css 
+    ├── App.js // 入口文件
+    ├── App.test.js // 测试文件
+    ├── index.css // 全局样式文件
+    ├── index.js // 入口文件
+    └── logo.svg 
+</code></pre>
+<h2 id="两个核心库"><a class="header" href="#两个核心库">两个核心库</a></h2>
+<p>react： React 核心库，提供react的各个功能</p>
+<p>react-dom： 提供一些dom操作方法，比如渲染、更新、删除等</p>
+<h2 id="react项目组件关系"><a class="header" href="#react项目组件关系">react项目组件关系:</a></h2>
+<p><img src="learn/react/./images/react%E7%BB%84%E4%BB%B6%E5%85%B3%E7%B3%BB.png" alt="react组件关系" /></p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="组件分类"><a class="header" href="#组件分类">组件分类</a></h1>
+<p>组件化开发，定义一个基本组件得有东西</p>
+<ol>
+<li>
+<p>组件html模板</p>
+</li>
+<li>
+<p>数据和方法</p>
+</li>
+</ol>
+<h2 id="组件类型"><a class="header" href="#组件类型">组件类型</a></h2>
+<p><strong>1. 函数组件</strong></p>
+<pre><code class="language-jsx">function HelloWorld() { // 新版本的组合是api
+    return &lt;h1&gt;Hello World&lt;/h1&gt;;
+}
+</code></pre>
+<p><strong>2. 类组件</strong></p>
+<pre><code class="language-jsx">class Hello extends React.Component { // 老版本的组合是createClass
+    render() {
+        return &lt;div&gt;Hello World&lt;/div&gt;;
+    }
+}
+</code></pre>
+<p><strong>example:</strong></p>
+<pre><code class="language-jsx">import './App.css';
+import React from 'react';
 
+function App() {
+  function HelloWorld() {
+    return &lt;div&gt;Hello World&lt;/div&gt;;
+  }
+  class ClassHello extends React.Component {
+    render() {
+      return &lt;div&gt;Hello World&lt;/div&gt;;
+    }
+  }
+
+  return (
+    &lt;div className=&quot;App&quot;&gt;
+      &lt;HelloWorld /&gt;
+      &lt;ClassHello /&gt;
+    &lt;/div&gt;
+  );
+}
+
+export default App;
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="jsx语法"><a class="header" href="#jsx语法">jsx语法</a></h1>
+<h2 id="jsx-的特点"><a class="header" href="#jsx-的特点">jsx 的特点</a></h2>
+<p><strong>直接js中混用:</strong> React项目利用babel做了对js的编译，jsx可以直接写在js文件中，这样可以更方便的与js代码混用。</p>
+<p><strong>写法接近js:</strong> jsx的语法和js很相似，不同点在于，可以更方便的写html在js里，写在js里的html代码会被编译成js对象，我们也可以使用creatElement方法来创建这个对象。</p>
+<pre><code class="language-jsx">import './App.css';
+import React from 'react';
+
+function App() {
+  function HelloWorld() {
+    return React.createElement(&quot;div&quot;, [null], &quot;Hello World&quot;)
+  }
+  return (
+    &lt;div className=&quot;App&quot;&gt;
+      &lt;HelloWorld /&gt;
+    &lt;/div&gt;
+  );
+}
+
+export default App;
+</code></pre>
+<h2 id="jsx-代码的本质"><a class="header" href="#jsx-代码的本质">jsx 代码的本质</a></h2>
+<p>编写jsx代码的本质，最终显示的结果是React.createElement()方法的调用。</p>
+<p><img src="learn/react/./images/jsx%E4%BB%A3%E7%A0%81%E7%9A%84%E6%9C%AC%E8%B4%A8.png" alt="jsx-syntax" /></p>
+<p>也可以使用let来定义，然后在jsx中使用。不需要使用尖括号，只需要使用花括号包裹，在jsx中使用<code>&lt;&gt;</code>会解析为<code>React.createElement()</code>方法。</p>
+<pre><code class="language-jsx">import './App.css';
+import React from 'react';
+
+function App() {
+  function HelloWorld() {
+    return &lt;div&gt;Hello World&lt;/div&gt;;
+  }
+
+  let hello = HelloWorld();
+
+  return (
+    &lt;div className=&quot;App&quot;&gt;
+      {hello}
+      &lt;HelloWorld /&gt;
+    &lt;/div&gt;
+  );
+}
+
+
+export default App;
+</code></pre>
+<h2 id="渲染规则"><a class="header" href="#渲染规则">渲染规则</a></h2>
+<div class="table-wrapper"><table><thead><tr><th>规则</th><th>描述</th></tr></thead><tbody>
+<tr><td>字符串，数字</td><td>直接渲染</td></tr>
+<tr><td>对象</td><td>只能渲染element对象</td></tr>
+<tr><td>数组</td><td>数组中的每一项都渲染</td></tr>
+<tr><td>表达式</td><td>运行表达式，并渲染结果</td></tr>
+<tr><td>方法</td><td>无法渲染</td></tr>
+<tr><td>布尔值，null，undefined</td><td>不渲染任何内容</td></tr>
+</tbody></table>
+</div><div style="break-before: page; page-break-before: always;"></div><h1 id="事件绑定"><a class="header" href="#事件绑定">事件绑定</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="响应式数据"><a class="header" href="#响应式数据">响应式数据</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
